# prueba-iot-agent

./: .gitignore  Dockerfile  EESP8266WiFi.cpp  README-IoT-AWS.md  docker-compose.yml  main.py  publish_temp.py  pyproject.toml  requirements.txt  server.py  setup.sh
.devcontainer/: devcontainer.json
backend/: main.py  requirements.txt
copilot/: .workspace
copilot/backend/: Dockerfile  manifest.yml
copilot/frontend/: manifest.yml
frontend/: main.py
